Fix some sonar warnings (#2306)
GitOrigin-RevId: dedbcec4341f65a1c49d1a25a2564e366074725f